--- a/BitacoraIp/Views/tb_bit_usuario/Create.cshtml
+++ b/BitacoraIp/Views/tb_bit_usuario/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BitacoraIp.Models.tb_bit_usuario
+﻿@model BitacoraDireccionesIp.Models.tb_bit_usuario
 
 @{
     ViewBag.Title = "Create";
@@ -11,15 +11,7 @@
 
     <fieldset>
         <legend>tb_bit_usuario</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.pk_cve_usuario)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.pk_cve_usuario)
-            @Html.ValidationMessageFor(model => model.pk_cve_usuario)
-        </div>
-
+        
         <div class="editor-label">
             @Html.LabelFor(model => model.nom_user_name)
         </div>
@@ -98,30 +90,6 @@
         <div class="editor-field">
             @Html.EditorFor(model => model.des_observacion)
             @Html.ValidationMessageFor(model => model.des_observacion)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.fec_alta)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.fec_alta)
-            @Html.ValidationMessageFor(model => model.fec_alta)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.fec_baja)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.fec_baja)
-            @Html.ValidationMessageFor(model => model.fec_baja)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.fec_actualiza)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.fec_actualiza)
-            @Html.ValidationMessageFor(model => model.fec_actualiza)
         </div>
 
         <p>
