--- a/BitacoraIp/Views/tb_bit_ip/Create.cshtml
+++ b/BitacoraIp/Views/tb_bit_ip/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BitacoraIp.Models.tb_bit_ip
+﻿@model BitacoraDireccionesIp.Models.tb_bit_ip
 
 @{
     ViewBag.Title = "Create";
@@ -6,7 +6,7 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm("Create","tb_bit_ip") ){
     @Html.ValidationSummary(true)
 
     <fieldset>
@@ -24,7 +24,7 @@
             @Html.LabelFor(model => model.pfk_cve_usuario, "tb_bit_usuario")
         </div>
         <div class="editor-field">
-            @Html.DropDownList("pfk_cve_usuario", String.Empty)
+            @Html.DropDownList("pfk_cve_usuario", "Seleccione")
             @Html.ValidationMessageFor(model => model.pfk_cve_usuario)
         </div>
 
