--- a/BitacoraIp/Views/tb_bit_usuario/Index.cshtml
+++ b/BitacoraIp/Views/tb_bit_usuario/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BitacoraIp.Models.tb_bit_usuario>
+﻿@model IEnumerable<BitacoraDireccionesIp.Models.tb_bit_usuario>
 
 @{
     ViewBag.Title = "Index";
@@ -9,7 +9,8 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table>
+<div class="row-fluid">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.pk_cve_usuario)
@@ -101,11 +102,48 @@
             @Html.DisplayFor(modelItem => item.fec_actualiza)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Detalle", "Details", new { id=item.pk_cve_usuario}) |            
+            @Html.ActionLink("Borrar", "Delete", new { id=item.pk_cve_usuario })  |          
+            <a href="@Url.Action("Edit", new { id=item.pk_cve_usuario })"  class="modalUsuario">Editar usuario</a>|
+            <a href="@Url.Action("ListByUser", "tb_bit_ip", new { cveusuario = item.pk_cve_usuario })"  class="detalleUsuario">Detalle direcciones</a>                        
         </td>
     </tr>
 }
 
 </table>
+</div>
+<div class="row-fluid" id="detalle">
+
+</div>
+
+
+<!-- Modal -->
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Modal header</h3>
+  </div>
+  <div class="modal-body" id="modalBody">
+    
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>    
+  </div>
+</div>
+
+<script type="text/javascript">
+ $(function() {
+     $('.detalleUsuario').click(function (e) {
+       e.preventDefault();
+       $('#detalle').load($(this).attr('href'));
+     });
+
+
+     $('.modalUsuario').click(function (e) {
+         e.preventDefault();
+         $('#modalBody').load($(this).attr('href'));
+         $('#myModal').modal('show');         
+     });     
+ });
+</script>
+
