Modificaciones a vistas para usar bootstrap y datepicker

--- a/BitacoraIp/Views/tb_bit_ip/Index.cshtml
+++ b/BitacoraIp/Views/tb_bit_ip/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BitacoraDireccionesIp.Models.tb_bit_ip>
+﻿@model IEnumerable<BitacoraIp.Models.tb_bit_ip>
 
 @{
     ViewBag.Title = "Index";
