--- a/BitacoraIp/Views/tb_bit_usuario/Index.cshtml
+++ b/BitacoraIp/Views/tb_bit_usuario/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BitacoraDireccionesIp.Models.tb_bit_usuario>
+﻿@model IEnumerable<BitacoraIp.Models.tb_bit_usuario>
 
 @{
     ViewBag.Title = "Index";
