--- a/BitacoraIp/Views/Shared/_Layout.cshtml
+++ b/BitacoraIp/Views/Shared/_Layout.cshtml
@@ -7,7 +7,11 @@
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")
+        @Scripts.Render("~/bundles/modernizr")                
+        
+        @Scripts.Render("~/js")
+        @RenderSection("scripts", required: false)
+
     </head>
     <body>
         <header>
@@ -43,7 +47,6 @@
             </div>
         </footer>
 
-        @Scripts.Render("~/bundles/jquery")
-        @RenderSection("scripts", required: false)
+        
     </body>
 </html>
