--- a/BitacoraIp/Views/Home/Index.cshtml
+++ b/BitacoraIp/Views/Home/Index.cshtml
@@ -9,11 +9,7 @@
                 <h2>@ViewBag.Message</h2>
             </hgroup>
             <p>
-                Para obtener más información sobre ASP.NET MVC, visite
-                <a href="http://asp.net/mvc" title="Sitio web de ASP.NET MVC">http://asp.net/mvc</a>.
-                La página incluye <mark>vídeos, cursos y ejemplos</mark> para ayudarle a sacar el máximo partido a ASP.NET MVC.
-                Si tiene alguna pregunta relacionada con ASP.NET MVC, visite
-                <a href="http://forums.asp.net/1146.aspx/1?MVC" title="Foro de ASP.NET MVC">nuestros foros</a>.
+                @Html.ActionLink("Usuarios", "Index", "tb_bit_usuario")                
             </p>
         </div>
     </section>
